DDP-6938 [A-T] Added disabling for Add a Participant button while waiting for the participant to be created

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.html
@@ -34,8 +34,9 @@
   </ng-template>
 
   <button
-    class="button ButtonFilled ButtonFilled--green"
     (click)="onAddParticipantClick()"
+    [disabled]="disableAddParticipantsButton"
+    class="button ButtonFilled ButtonFilled--green"
   >
     <mat-icon>add</mat-icon>
     <span translate>SDK.ManageParticipants.AddParticipant</span>
