--- a/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/participant-list/participant-list.component.scss
@@ -12,8 +12,16 @@
     padding: 2rem 0;
   }
 
-  .ButtonFilled--green {
-    margin-left: 0;
+  .ButtonFilled {
+    &:disabled {
+      opacity: .8;
+      cursor: not-allowed;
+      background-color: $green!important;
+      border-color: $green!important;
+    }
+    &--green {
+      margin-left: 0;
+    }
   }
 }
 
