DDP-6952 add new logos to colorectal page

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -94,6 +94,14 @@
                 <img lazy-resource src="assets/images/GCCA_logo.png"
                      [alt]="'App.ColorectalPage.Partners.Alts.GCCA' | translate" width="330px">
             </a>
+            <a href="https://www.ccalliance.org/" target="_blank">
+                <img lazy-resource src="assets/images/Hi-Res_logo.png"
+                     [alt]="'App.ColorectalPage.Partners.Alts.CCAlliance' | translate" width="400px">
+            </a>
+            <a href="https://coloncancercoalition.org/" target="_blank">
+                <img lazy-resource src="assets/images/Colon_Cancer_Coalition_logo.png"
+                     [alt]="'App.ColorectalPage.Partners.Alts.ColonCancerCoalition' | translate" width="330px">
+            </a>
         </div>
         <p class="text static-page-paragraph-text" [innerHTML]="'App.ColorectalPage.Partners.Text' | translate"></p>
     </section>
