Added correct status and action for Mini Sleep Log, removed date creating from the client side

--- a/ddp-workspace/projects/ddp-circadia/src/app/components/pages/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/pages/dashboard/dashboard.component.html
@@ -12,6 +12,9 @@
   <app-user-activities
     [activities]="activities"
     [sleepLogUrl]="diaryUrl"
+    [sleepLogStatus]="diaryStatus"
+    [sleepLogUrlError]="diaryUrlError"
+    [sleepLogStatusError]="diaryStatusError"
     (startActivity)="onStartActivity($event)"
     (continueActivity)="onContinueActivity($event)"
     (viewActivity)="onViewActivity($event)"
