DDP-6128 Fixed infinite loader for mini sleep log

--- a/ddp-workspace/projects/ddp-circadia/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/user-activities/user-activities.component.html
@@ -1,3 +1,5 @@
+<pre>{{sleepLogUrlError | json }}</pre>
+<pre>{{sleepLogStatusError | json }}</pre>
 <table mat-table [dataSource]="activities">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>
