DDP-6951 Added Spanish typos fixes for RGP

--- a/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/about-us.component.html
+++ b/ddp-workspace/projects/ddp-rgp/src/app/components/about-us/about-us.component.html
@@ -114,10 +114,7 @@
             let first = first
           "
         >
-          <h3 class="Subtitle Aligned--center" [class.mt-40]="!first">
-            {{ category.Title }}
-          </h3>
-
+          <h3 class="Subtitle Aligned--center" [class.mt-40]="!first" [innerHtml]="category.Title | translate"></h3>
           <ng-container *ngFor="let member of category.Members">
             <ng-container
               *ngTemplateOutlet="memberTemplate; context: { member: member }"
