--- a/ddp-workspace/projects/ddp-circadia/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/user-activities/user-activities.component.html
@@ -19,11 +19,31 @@
     </th>
 
     <td mat-cell *matCellDef="let activity">
-      <div class="mobile-column-name">
-        {{ 'UserActivities.Header.Summary' | translate }}
-      </div>
+      <ng-container [ngSwitch]="activity.activityCode">
+        <ng-container *ngSwitchCase="ActivityCode.MiniSleepLog">
+          <ng-container *ngIf="sleepLogStatus === ActivityStatusCode.CREATED">
+            <div class="mobile-column-name">
+              {{ 'UserActivities.Header.Summary' | translate }}
+            </div>
+      
+            {{ 'UserActivities.MiniSleepLogSummary.Created' | translate }}
+          </ng-container>
+          <ng-container *ngIf="sleepLogStatus === ActivityStatusCode.COMPLETE">
+            <div class="mobile-column-name">
+              {{ 'UserActivities.Header.Summary' | translate }}
+            </div>
+      
+            {{ 'UserActivities.MiniSleepLogSummary.Complete' | translate }}
+          </ng-container>
+        </ng-container>
+        <ng-container *ngSwitchDefault>
+            <div class="mobile-column-name">
+              {{ 'UserActivities.Header.Summary' | translate }}
+            </div>
 
-      {{ activity.activitySummary || 'TBD' }}
+            {{ activity.activitySummary || 'TBD' }}
+        </ng-container>
+      </ng-container>
     </td>
   </ng-container>
 
