DDP-6982: Update Circadia study phone number

--- a/ddp-workspace/projects/ddp-circadia/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-circadia/src/app/components/footer/footer.component.html
@@ -54,7 +54,7 @@
 
         <ul class="links__list">
           <li class="links__list-item">
-            <a class="links__link" href="tel:16177267733">1 (617) 726-7733</a>
+            <a class="links__link" href="tel:18572656742">+1 (857) 265-6742</a>
           </li>
 
           <li class="links__list-item">
