DDP-6968: Disable "Edit" button while request is still pending

--- a/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/dashboard/dashboard.component.html
@@ -33,6 +33,7 @@
     <app-user-activities
       [activities]="activities"
       [isParticipantIneligible]="isContactUsStatus"
+      [isUiBlocked]="isUiBlocked"
       (startActivity)="goToActivity($event)"
       (continueActivity)="goToActivity($event)"
       (viewActivity)="goToActivity($event)"
