--- a/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.html
+++ b/ddp-workspace/projects/ddp-atcp/src/app/components/user-activities/user-activities.component.html
@@ -128,6 +128,7 @@
             !isParticipantIneligible
           "
           class="BtnFilled BtnFilled--blue"
+          [disabled]="isUiBlocked"
           (click)="editActivity.emit(activity)"
         >
           {{ 'Toolkit.ActivityActions.Edit' | translate }}
