--- a/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
@@ -512,6 +512,7 @@ select:disabled {
                                 .mat-radio-group {
                                     display: flex !important;
                                     flex-flow: row nowrap !important;
+                                    align-items: center;
 
                                     height: 100%;
 
@@ -528,6 +529,8 @@ select:disabled {
                                                 margin: 0;
 
                                                 .mat-radio-label-content {
+                                                    display: none;
+
                                                     padding: 0;
 
                                                     font-size: 1rem;
@@ -548,57 +551,31 @@ select:disabled {
                             align-self: flex-end;
                         }
 
-                        > div {
-                            ddp-activity-radiobuttons-picklist-question {
-                                > div {
-                                    .mat-radio-group {
-                                        .margin-5 {
-                                            .mat-radio-button {
-                                                height: 100%;
+                        .mat-radio-group {
+                            align-items: stretch;
 
-                                                .mat-radio-label {
-                                                    display: flex;
-                                                    flex-flow: column-reverse nowrap;
-                                                    align-items: center !important;
+                            .margin-5 {
+                                .mat-radio-button {
+                                    height: 100%;
 
-                                                    height: 100%;
+                                    .mat-radio-label {
+                                        display: flex;
+                                        flex-flow: column-reverse nowrap;
+                                        align-items: center !important;
 
-                                                    .mat-radio-container {
-                                                        margin-top: 2rem;
-                                                    }
+                                        height: 100%;
 
-                                                    .mat-radio-label-content {
-                                                        margin-bottom: auto;
-                                                        padding: 0 0.25rem;
-
-                                                        text-align: center;
-                                                    }
-                                                }
-                                            }
+                                        .mat-radio-container {
+                                            margin-top: 2rem;
                                         }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
 
-                &:not(:first-of-type) {
-                    ddp-activity-picklist-answer {
-                        > div {
-                            ddp-activity-radiobuttons-picklist-question {
-                                > div {
-                                    .mat-radio-group {
-                                        align-items: center;
+                                        .mat-radio-label-content {
+                                            display: block;
 
-                                        .margin-5 {
-                                            .mat-radio-button {
-                                                .mat-radio-label {
-                                                    .mat-radio-label-content {
-                                                        display: none;
-                                                    }
-                                                }
-                                            }
+                                            margin-bottom: auto;
+                                            padding: 0 0.25rem;
+
+                                            text-align: center;
                                         }
                                     }
                                 }
