--- a/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
@@ -186,7 +186,7 @@
 
 @media screen and (max-width: $desktop-breakpoint) {
     .section {
-        &-0,  {
+        &-0 {
             background-size: auto 480px !important;
         }
 
