Fixed main layout

--- a/ddp-workspace/projects/ddp-singular/src/app/components/header/header.component.scss
+++ b/ddp-workspace/projects/ddp-singular/src/app/components/header/header.component.scss
@@ -31,7 +31,7 @@ $headerHeight: (
     display: flex;
     align-items: center;
 
-    max-width: 120rem;
+    max-width: 1250px;
     height: 100%;
 
     margin: 0 auto;
