--- a/ddp-workspace/projects/ddp-singular/src/styles/_link-list.scss
+++ b/ddp-workspace/projects/ddp-singular/src/styles/_link-list.scss
@@ -14,7 +14,7 @@
 
   &__item {
     & + & {
-      margin-left: 2.8rem;
+      margin-left: 25px;
 
       @include media-md {
         margin-top: 1.6rem;
