--- a/ddp-workspace/projects/ddp-singular/src/styles/_common.scss
+++ b/ddp-workspace/projects/ddp-singular/src/styles/_common.scss
@@ -7,6 +7,7 @@
 }
 
 html {
+  height: 100%;
   font-size: 20px;
 
   @media (max-width: 1280px) {
@@ -23,6 +24,7 @@ body {
   font-size: 1rem;
   line-height: 1.5rem;
   color: $color-text;
+  height: 100%;
 }
 
 .row {
