Add verify & accept age up pages & other minor fixes

--- a/ddp-workspace/projects/ddp-singular/src/mat-theme.scss
+++ b/ddp-workspace/projects/ddp-singular/src/mat-theme.scss
@@ -108,7 +108,7 @@ $app-warn: mat-palette($md-warn);
 $app-theme: mat-light-theme($app-primary, $app-secondary, $app-warn);
 
 $app-typography: mat-typography-config(
-  $font-family: 'Catamaran, sans-serif',
+  $font-family: 'Spartan, sans-serif',
 );
 
 @include angular-material-theme($app-theme);
