--- a/ddp-workspace/projects/ddp-singular/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-singular/src/styles/_buttons.scss
@@ -30,6 +30,7 @@
   display: inline-block;
   padding: 7px 50px;
   font-size: 1rem;
+  font-family: 'Spartan-Medium';
   line-height: 1.4rem;
   text-align: center;
   text-decoration: none !important;
