--- a/ddp-workspace/projects/ddp-singular/src/styles/_fonts.scss
+++ b/ddp-workspace/projects/ddp-singular/src/styles/_fonts.scss
@@ -12,3 +12,13 @@
   font-family: Spartan-Light;
   src: url('../assets/fonts/Spartan-Light.ttf');
 }
+
+@font-face {
+  font-family: Spartan-Medium;
+  src: url('../assets/fonts/Spartan-Medium.ttf');
+}
+
+@font-face {
+  font-family: Spartan-Semibold;
+  src: url('../assets/fonts/Spartan-SemiBold.ttf');
+}
