--- a/ddp-workspace/projects/ddp-singular/src/styles/_typography.scss
+++ b/ddp-workspace/projects/ddp-singular/src/styles/_typography.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 p {
-  font-family: 'Catamaran', sans-serif;
+  font-family: 'Spartan-Regular', sans-serif;
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 400;
@@ -37,8 +37,7 @@ h2.Title {
 }
 
 .semibold {
-  font-family: 'Catamaran', sans-serif !important;
-  font-weight: 600 !important;
+  font-family: 'Spartan-Semibold', sans-serif !important;
 }
 
 .medium {
@@ -47,7 +46,7 @@ h2.Title {
 
 .medium,
 .normal {
-  font-family: Catamaran, sans-serif;
+  font-family: 'Spartan-Regular', sans-serif;
 }
 
 .light {
