DDP-6884 small fixes for birthday date

--- a/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
@@ -136,6 +136,14 @@ ddp-user-preferences {
             }
         }
     }
+
+    .ddp-date-field-margin {
+        margin-right: 1rem;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 }
 
 @media only screen and(max-width: 650px) {
