DDP-6185 Added FAQ page

--- a/ddp-workspace/projects/ddp-singular/src/styles/_colors.scss
+++ b/ddp-workspace/projects/ddp-singular/src/styles/_colors.scss
@@ -16,4 +16,5 @@ $colors: (
   'font-light': $__white,
   'list-item-hightlight-bg': $__light-blue,
   'list-item-hightlight-color': $__font,
+  'faq-border': #ccc,
 );
